// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container allows additional classes to be passed through 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0 test-class"
  />
</div>
`;

exports[`Container allows padding to be passed through 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0 0.4rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0 test-class"
  />
</div>
`;

exports[`Container has a container and fixed class by default 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Container renders children 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0"
  >
    <div
      class="child-content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Container renders correctly without props 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0"
  />
</div>
`;
